# TRIGON-GC

./: .gitignore  Original_TRIGON_code.ipynb  README.md  TRIGON_GC_Protein.ipynb  TRIGON_ablations.ipynb  main.py  pyproject.toml
